// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsViewCommandBar renders with buttons collapsed into a menu 1`] = `
<DocumentFragment>
  <div
    aria-label="command bar"
    class="detailsViewCommandBar"
    role="region"
  >
    <div
      aria-labelledby="switch-to-target"
      class="detailsViewTargetPage"
    >
      <span
        id="switch-to-target"
      >
        Target page: 
      </span>
      <mock-newtablinkwithtooltip
        aria-label="Switch to target page: command-bar-test-tab-title"
        classname="targetPageLink"
        role="link"
        tooltipcontent="Switch to target page: command-bar-test-tab-title"
      >
        <span
          class="targetPageTitle"
        >
          command-bar-test-tab-title
        </span>
      </mock-newtablinkwithtooltip>
    </div>
    <mock-commandbarbuttonsmenu />
    <mock-exportdialog
      description=""
      featureflagstoredata="[object Object]"
      htmlexportdata=""
      htmlfilename=""
      htmlfileurl="#"
      isopen="false"
      jsonexportdata=""
      jsonfilename=""
      jsonfileurl="#"
      reportexportformat="Assessment"
      reportexportservices="[object Object],[object Object],[object Object]"
    />
    <mock-invalidloadassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-loadassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      loadedassessmentdata="[object Object]"
      narrowmodestatus="[object Object]"
      prevtab="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabid="5"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-startoverdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      dialogstate="none"
      featureflagstoredata="[object Object]"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-quickassesstoassessmentconfirmdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isshown="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-saveassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`DetailsViewCommandBar renders with export button and start over 1`] = `
<DocumentFragment>
  <div
    aria-label="command bar"
    class="detailsViewCommandBar"
    role="region"
  >
    <div
      aria-labelledby="switch-to-target"
      class="detailsViewTargetPage"
    >
      <span
        id="switch-to-target"
      >
        Target page: 
      </span>
      <mock-newtablinkwithtooltip
        aria-label="Switch to target page: command-bar-test-tab-title"
        classname="targetPageLink"
        role="link"
        tooltipcontent="Switch to target page: command-bar-test-tab-title"
      >
        <span
          class="targetPageTitle"
        >
          command-bar-test-tab-title
        </span>
      </mock-newtablinkwithtooltip>
    </div>
    <div
      class="detailsViewCommandButtons"
    >
      <mock-reportexportbutton />
      <div>
        Save assessment
      </div>
      <div>
        Transfer to assessment stub
      </div>
      <button
        class="fui-Button r1alrhcs"
        type="button"
      >
        Start Over Component
      </button>
    </div>
    <mock-exportdialog
      description=""
      featureflagstoredata="[object Object]"
      htmlexportdata=""
      htmlfilename=""
      htmlfileurl="#"
      isopen="false"
      jsonexportdata=""
      jsonfilename=""
      jsonfileurl="#"
      reportexportformat="Assessment"
      reportexportservices="[object Object],[object Object],[object Object]"
    />
    <mock-invalidloadassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-loadassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      loadedassessmentdata="[object Object]"
      narrowmodestatus="[object Object]"
      prevtab="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabid="5"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-startoverdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      dialogstate="none"
      featureflagstoredata="[object Object]"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-quickassesstoassessmentconfirmdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isshown="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-saveassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`DetailsViewCommandBar renders with export button, without start over 1`] = `
<DocumentFragment>
  <div
    aria-label="command bar"
    class="detailsViewCommandBar"
    role="region"
  >
    <div
      aria-labelledby="switch-to-target"
      class="detailsViewTargetPage"
    >
      <span
        id="switch-to-target"
      >
        Target page: 
      </span>
      <mock-newtablinkwithtooltip
        aria-label="Switch to target page: command-bar-test-tab-title"
        classname="targetPageLink"
        role="link"
        tooltipcontent="Switch to target page: command-bar-test-tab-title"
      >
        <span
          class="targetPageTitle"
        >
          command-bar-test-tab-title
        </span>
      </mock-newtablinkwithtooltip>
    </div>
    <div
      class="detailsViewCommandButtons"
    >
      <mock-reportexportbutton />
      <div>
        Save assessment
      </div>
      <div>
        Transfer to assessment stub
      </div>
    </div>
    <mock-exportdialog
      description=""
      featureflagstoredata="[object Object]"
      htmlexportdata=""
      htmlfilename=""
      htmlfileurl="#"
      isopen="false"
      jsonexportdata=""
      jsonfilename=""
      jsonfileurl="#"
      reportexportformat="Assessment"
      reportexportservices="[object Object],[object Object],[object Object]"
    />
    <mock-invalidloadassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-loadassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      loadedassessmentdata="[object Object]"
      narrowmodestatus="[object Object]"
      prevtab="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabid="5"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-startoverdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      dialogstate="none"
      featureflagstoredata="[object Object]"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-quickassesstoassessmentconfirmdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isshown="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-saveassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`DetailsViewCommandBar renders without export button and without start over 1`] = `
<DocumentFragment>
  <div
    aria-label="command bar"
    class="detailsViewCommandBar"
    role="region"
  >
    <div
      aria-labelledby="switch-to-target"
      class="detailsViewTargetPage"
    >
      <span
        id="switch-to-target"
      >
        Target page: 
      </span>
      <mock-newtablinkwithtooltip
        aria-label="Switch to target page: command-bar-test-tab-title"
        classname="targetPageLink"
        role="link"
        tooltipcontent="Switch to target page: command-bar-test-tab-title"
      >
        <span
          class="targetPageTitle"
        >
          command-bar-test-tab-title
        </span>
      </mock-newtablinkwithtooltip>
    </div>
    <div
      class="detailsViewCommandButtons"
    >
      <div>
        Save assessment
      </div>
      <div>
        Transfer to assessment stub
      </div>
    </div>
    <mock-exportdialog
      description=""
      featureflagstoredata="[object Object]"
      htmlexportdata=""
      htmlfilename=""
      htmlfileurl="#"
      isopen="false"
      jsonexportdata=""
      jsonfilename=""
      jsonfileurl="#"
      reportexportformat="Assessment"
      reportexportservices="[object Object],[object Object],[object Object]"
    />
    <mock-invalidloadassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-loadassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      loadedassessmentdata="[object Object]"
      narrowmodestatus="[object Object]"
      prevtab="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabid="5"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-startoverdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      dialogstate="none"
      featureflagstoredata="[object Object]"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-quickassesstoassessmentconfirmdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isshown="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-saveassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`DetailsViewCommandBar renders without export button, with start over 1`] = `
<DocumentFragment>
  <div
    aria-label="command bar"
    class="detailsViewCommandBar"
    role="region"
  >
    <div
      aria-labelledby="switch-to-target"
      class="detailsViewTargetPage"
    >
      <span
        id="switch-to-target"
      >
        Target page: 
      </span>
      <mock-newtablinkwithtooltip
        aria-label="Switch to target page: command-bar-test-tab-title"
        classname="targetPageLink"
        role="link"
        tooltipcontent="Switch to target page: command-bar-test-tab-title"
      >
        <span
          class="targetPageTitle"
        >
          command-bar-test-tab-title
        </span>
      </mock-newtablinkwithtooltip>
    </div>
    <div
      class="detailsViewCommandButtons"
    >
      <div>
        Save assessment
      </div>
      <div>
        Transfer to assessment stub
      </div>
      <button
        class="fui-Button r1alrhcs"
        type="button"
      >
        Start Over Component
      </button>
    </div>
    <mock-exportdialog
      description=""
      featureflagstoredata="[object Object]"
      htmlexportdata=""
      htmlfilename=""
      htmlfileurl="#"
      isopen="false"
      jsonexportdata=""
      jsonfilename=""
      jsonfileurl="#"
      reportexportformat="Assessment"
      reportexportservices="[object Object],[object Object],[object Object]"
    />
    <mock-invalidloadassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-loadassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      loadedassessmentdata="[object Object]"
      narrowmodestatus="[object Object]"
      prevtab="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabid="5"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-startoverdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      dialogstate="none"
      featureflagstoredata="[object Object]"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-quickassesstoassessmentconfirmdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isshown="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <mock-saveassessmentdialog
      assessmentstoredata="[object Object]"
      datatransferviewstoredata="[object Object]"
      deps="[object Object]"
      featureflagstoredata="[object Object]"
      isopen="false"
      narrowmodestatus="[object Object]"
      rightpanelconfiguration="[object Object]"
      scanmetadata="[object Object]"
      switchernavconfiguration="[object Object]"
      tabstoredata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
  </div>
</DocumentFragment>
`;
